fix: responsive hamburger menu on mobile

--- a/src/styles/base/global.css
+++ b/src/styles/base/global.css
@@ -24,11 +24,6 @@
         /* Hide standard links on mobile */
     }
 
-    .mobile-menu-btn {
-        display: flex;
-        /* Show hamburger */
-    }
-
     .nav-logo-img {
         width: 45px;
         height: 45px;
